=============
Grr Changelog
=============

Nov-12-2006 Yen-Ju Chen <yjchenx at gmail>
	* Try to add services back.
	* Run preferences as modal.
	* Support fetching at startup and scheduled fetching based on 
          user defaults (on Cocoa and GNUstep). 
        * Open main window if dock is clicked.
	* Handle refresh on group.
	* Do not add articles older than user defaults.

Nov-11-2006 Yen-Ju Chen <yjchenx at gmail>
	* Speed up starting by avoid rebuild internal cache frequently.
	* Display main window after everything is properly set up.
	* Font preferences (on Cocoa and GNUstep).
	* Automatically get feed from pasteboard.
	* Since we don't use RSSFeed to keep articles,
          always use [RSSFeed -setAutoClear:YES].
	* Remove unnecessary Info-gnustep files.
	* Use GrrInfo.plist.
	* Add Info.plist and rssreader.icns for Cocoa.

Nov-10-2006 Yen-Ju Chen <yjchenx at gmail>
	* Save frames.
	* Clean up FetchProgressManager in prepare for improvement.
	* Deselect articles when feed changes.
	* Use timer and queue to schedule feed fetching.
	* Work on GNUstep.
	* Improve speed by reducing updating internal articles cache.
	* Use autorelease pool on heavy process to reduce memory usage.
	* Speed up deleting old articles.

Nov-09-2006 Yen-Ju Chen <yjchenx at gmail>
	* Use PKPane for Log.
	* Automatically clean up articles older than user defaults.
	* Work on GNUstep.
	* Let user assign which web browser to use (only on GNUstep).
	* Make sure it work on Cocoa.

Nov-08-2006 Yen-Ju Chen <yjchenx at gmail>
	* Adapt PaneKit for preferences.

Nov-06-2006 Yen-Ju Chen <yjchenx at gmail>
 	* "Main Window" menu item.
	* Display progress of fetching.
	* Spped up -markAllRead: and -markAllUnread:.
	* Work on GNUstep.

Nov-05-2006 Yen-Ju Chen <yjchenx at gmail>

	* Open link with enter key.
	* Remove HTML tag (temporary fix).
	* Open link with firefox as default.
	* Cache browser.

Nov-4-2006  Guenther Noack <guenther at unix-ag.uni-kl.de>
